# dotfiles-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-agent-hooks.yml  ci-claude-statusline.yml  release-agent-hooks.yml  release-claude-statusline.yml
agent_hooks/: Cargo.toml  README.md
agent_hooks/claude/: Cargo.toml
agent_hooks/claude/src/: main.rs
agent_hooks/cli/: Cargo.toml
agent_hooks/cli/src/: hooks.rs  main.rs  tests.rs
agent_hooks/copilot/: Cargo.toml
agent_hooks/copilot/src/: main.rs
agent_hooks/core/: Cargo.toml
agent_hooks/core/src/: lib.rs  tests.rs
agent_hooks/opencode/: Cargo.toml
agent_hooks/opencode/src/: lib.rs
claude_statusline/: Cargo.toml  README.md
claude_statusline/src/: main.rs
permissions-gen/: go.mod  json_scan.go  main.go  main_test.go  permissions-gen
