[workspace]
members = [
    "agent_hooks/core",
    "agent_hooks/claude",
    "agent_hooks/opencode",
    "claude_statusline",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
