[workspace]
members = ["core", "claude", "opencode"]
resolver = "2"

[workspace.dependencies]
serde_json = "1"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
