[package]
name = "claude_statusline"
version = "0.1.1"
edition = "2024"
description = "Powerline-style statusline renderer for Claude Status hook"
license = "Apache-2.0"
publish = false

[dependencies]
crossterm = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = "0.2"

[lints]
workspace = true
