[package]
name = "claude_statusline"
version = "0.1.8"
edition.workspace = true
description = "Powerline-style statusline renderer for Claude Status hook"
license.workspace = true
publish = false

[dependencies]
crossterm = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = "0.2"

[lints]
workspace = true
