[package]
name = "agent_hooks_claude"
version = "0.4.2"
edition = "2024"
description = "agent_hooks CLI for Claude Code"
license = "Apache-2.0"
publish = false

[[bin]]
name = "agent_hooks_claude"
path = "src/main.rs"

[dependencies]
agent_hooks = { path = "../core" }
seahorse = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
