[package]
name = "agent_hooks"
version = "0.7.1"
edition.workspace = true
description = "Unified agent_hooks CLI for Claude Code, Codex, and GitHub Copilot CLI"
license.workspace = true
publish = false

[[bin]]
name = "agent_hooks"
path = "src/main.rs"

[dependencies]
agent_hooks = { package = "agent_hooks_core", path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
