[package]
name = "agent_hooks_copilot"
version = "0.6.0"
edition.workspace = true
description = "agent_hooks CLI for GitHub Copilot CLI"
license.workspace = true
publish = false

[[bin]]
name = "agent_hooks_copilot"
path = "src/main.rs"

[dependencies]
agent_hooks = { path = "../core" }
seahorse = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
