[package]
name = "agent_hooks_core"
version = "0.7.0"
edition.workspace = true
description = "A hook system for AI coding agents"
license.workspace = true
repository = "https://github.com/waki285/dotfiles"

[lib]
name = "agent_hooks"
path = "src/lib.rs"

[dependencies]
regex = "1"

[lints]
workspace = true
