[package]
name = "agent_hooks_opencode"
version = "0.4.2"
edition = "2024"
description = "agent_hooks NAPI bindings for OpenCode"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_hooks = { path = "../core" }
napi = "3"
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
