[package]
name = "agent_hooks_opencode"
version = "0.6.0"
edition.workspace = true
description = "agent_hooks NAPI bindings for OpenCode"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_hooks = { path = "../core" }
napi = "3"
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
